--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyber Bar Cellphone Repair Ticketing System</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="app.js"></script>
 </head>
 <body>
-    
+    <button onclick="createTable()">Create Table</button>
 </body>
 </html>
