--- a/login.html
+++ b/login.html
@@ -8,19 +8,19 @@
 </head>
 <body>
 <h1>Log in</h1>
-<p>If you don't have an account, you may <a href="/register.html">register</a> for one</p>
+<p>If you don't have an account, you may <a href="/register">register</a> for one</p>
 <form action="/login" method="post">
     <table>
         <tr>
             <td><label for="username">Username</label></td>
             <td>
-                <input name="username" value="{{ username }}">
+                <input type ="text" name="username" id="username" value="">
             </td>
         </tr>
         <tr>
             <td><label for="password">Password</label></td>
             <td>
-                <input name="password" type="password" value="{{ password }}">
+                <input type ="text" name="password" id="password" value="">
             </td>
         </tr>
     </table>
