--- a/register.html
+++ b/register.html
@@ -8,34 +8,27 @@
 </head>
 <body>
     <h1>Register</h1>
-        <form action="/" method="post">
+        <form action="/registerUser" method="post">
             <table>
                 <tr>
                     <td><label for="username">Username</label></td>
                     <td>
-                        <input name="username" type="text" value="{{ username }}">
-                        <span class="error">{{ username_error }}</span>
+                        <input name="username" id="username" type="text" value="">
+                        <span class="error"></span>
                     </td>
                 </tr>
                 <tr>
                     <td><label for="password">Password</label></td>
                     <td>
-                        <input name="password" type="password">
-                        <span class="error">{{ password_error }}</span>
+                        <input name="password" id="password" type="password">
+                        <span class="error"></span>
                     </td>
                 </tr>
                 <tr>
                     <td><label for="verify">Verify Password</label></td>
                     <td>
-                        <input name="verify" type="password">
-                        <span class="error">{{ verify_error }}</span>
-                    </td>
-                </tr>
-                <tr>
-                    <td><label for="email">Email (optional)</label></td>
-                    <td>
-                        <input name="email" value="{{ email }}">
-                        <span class="error">{{ email_error }}</span>
+                        <input name="verify" id="verify" type="password">
+                        <span class="error"></span>
                     </td>
                 </tr>
             </table>
